<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="19dp"
        android:text="@string/eq1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="272dp"
        android:text="@string/risultato"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_X1"
        android:layout_width="54dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="X"
        android:inputType="number|text|numberDecimal"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/input_X2"
        android:layout_width="54dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:hint="X"
        android:inputType="number|text|numberDecimal"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/input_Y1"
        android:layout_width="54dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Y"
        android:inputType="number|text|numberDecimal"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/input_Y2"
        android:layout_width="54dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:hint="Y"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/input_Risultato1"
        android:layout_width="118dp"
        android:layout_height="51dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/risultato"
        android:inputType="number|text|numberDecimal"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/input_Risultato2"
        android:layout_width="118dp"
        android:layout_height="51dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:hint="@string/risultato"
        android:inputType="number|text|numberDecimal"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="14dp"
        android:text="@string/eq2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_X1" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="21dp"
        android:text="@string/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_X2" />

    <TextView
        android:id="@+id/risultatoY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="13dp"
        android:text="@string/risultato_y"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/risultatoX2" />

    <TextView
        android:id="@+id/risultatoX2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/risultato_x"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>